@@ -15,6 +15,8 @@ NEXT:
  * unused code was removed
  * the faq section in the documentation was extended
  * outdated documentation was removed
+ * a bug was fixed that lead to partial results being left on local servers
+   or in the cache when copying was interrupted
 
 e2factory-2.3.1
  * bugfixes
